--- a/src/app/users/pages/users-page/users-page.component.html
+++ b/src/app/users/pages/users-page/users-page.component.html
@@ -2,6 +2,7 @@
 
   <div class="col-12">
     <h1>Usuarios <small>- sin Señales (Tradicional)</small></h1>
+    <h2>Total de Usuarios : {{users.length }}</h2>
     <hr>
   </div>
 
@@ -12,35 +13,18 @@
           <th scope="col">#</th>
           <th scope="col">First</th>
           <th scope="col">Last</th>
-          <th scope="col">Handle</th>
           <th scope="col">Email</th>
           <th scope="col">Avatar</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <th scope="row">1</th>
+          <th scope="row">{{user.id}}</th>
           <td>Mark</td>
           <td>Otto</td>
           <td>@mdo</td>
           <td>@mdo</td>
           <td>@mdo</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-          <td>@fat</td>
-          <td>@fat</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td>Jessica</td>
-          <td>Davidson</td>
-          <td>@twitter</td>
-          <td>@twitter</td>
-          <td>@twitter</td>
         </tr>
       </tbody>
     </table>
