--- a/src/app/users/pages/users-page/users-page.component.html
+++ b/src/app/users/pages/users-page/users-page.component.html
@@ -18,20 +18,25 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <th scope="row">{{user.id}}</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-          <td>@mdo</td>
-          <td>@mdo</td>
-        </tr>
+       
+          @for(user of users; track user.id){
+            <tr>
+            <th scope="row">{{user.id}}</th>
+            <td>{{user.first_name}}</td>
+            <td>{{user.last_name}}</td>
+            <td>{{user.email}}</td>
+            <td> 
+              <img [src]="user.avatar" alt="">
+            </td>
+          </tr>
+        }
+       
       </tbody>
     </table>
   </div>
 </div>
 
 
-<button class="btn btn-primary">
-  Cargar más
+<button (click)="loadPage(currentPage + 1)" class="btn btn-primary">
+  Cargar más - Pagina ({{currentPage}})
 </button>
